--- a/appsettings.json
+++ b/appsettings.json
@@ -19,7 +19,7 @@
   "Kestrel": {
     "EndPoints": {
       "Http": {
-        "Url": "http://localhost:8080" // Change the port number here
+        "Url": "http://localhost:8080"
       }
     }
   }
