--- a/.github/workflows/main_pergisafar.yml
+++ b/.github/workflows/main_pergisafar.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy ASP.Net Core app to Azure Web App - pergisafar
 
 on:
@@ -19,26 +16,26 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '6.0.x'
+          dotnet-version: "6.0.x"
           include-prerelease: true
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish -c Release -o ./myapp # Use a relative path for output
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ./myapp # Use a relative path for the artifact
 
   deploy:
     runs-on: windows-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production" # Check if this environment name is correct
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
@@ -51,7 +48,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
-          app-name: 'pergisafar'
-          slot-name: 'Production'
+          app-name: "pergisafar" # Update with your Azure Web App name
+          slot-name: "Production" # Update with your Azure Slot name
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_A1411C7FC0334218859B7103CD4B7147 }}
-          package: .
+          package: ./myapp # Use a relative path for the artifact
