--- a/appsettings.json
+++ b/appsettings.json
@@ -15,12 +15,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "EndPoints": {
-      "Http": {
-        "Url": "http://localhost:8080"
-      }
-    }
-  }
+  "AllowedHosts": "*"
 }
