--- a/appsettings.json
+++ b/appsettings.json
@@ -15,5 +15,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "EndPoints": {
+      "Http": {
+        "Url": "http://localhost:5160"
+      },
+      "Https": {
+        "Url": "https://localhost:8080"
+      }
+    }
+  }
 }
