--- a/appsettings.json
+++ b/appsettings.json
@@ -22,12 +22,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "EndPoints": {
-      "Https": {
-        "Url": "https://localhost:8080"
-      }
-    }
-  }
+  "AllowedHosts": "*"
 }
